--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch: # Permite execução manual
+  workflow_dispatch: 
 
 jobs:
   build-node-app:
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18' # ou outra versão necessária
+          node-version: '18' 
 
       - name: Install dependencies
         run: npm install
