--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,3 +25,12 @@ jobs:
 
       - name: Build project
         run: npm run build
+      
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/meu-app:latest .
+
+      - name: Push Docker image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/meu-app:latest
