ajuste no nome da imagem

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/meu-app:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/app-triangulo:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/meu-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/app-triangulo:latest
