Criação de teste de unidades/pipeline de testes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Projeto node + express criado com o proposito de praticar a implementação de pipelines com o github actions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server.js",
     "build": "babel src -d dist"
   },
@@ -15,6 +15,8 @@
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.3",
     "@babel/preset-env": "^7.28.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jest": "^30.1.3",
+    "supertest": "^7.1.4"
   }
 }
