--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,8 +8,28 @@ on:
   workflow_dispatch: 
 
 jobs:
+
+  build-test:
+    runs-on: ubuntu-latest
+
+    steps:
+       - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18' 
+
+      - name: Install dependencies
+        run: npm install
+      
+      - name: Run tests
+        run: npm test
+
   build-node-app:
     runs-on: ubuntu-latest
+    needs: test-node-app
 
     steps:
       - name: Checkout code
