--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,7 +29,7 @@ jobs:
 
   build-node-app:
     runs-on: ubuntu-latest
-    needs: test-node-app
+    needs: build-test
 
     steps:
       - name: Checkout code
