Alteração no servidor utilizado pelo jest, para que ele possa finalizar o pipeline de testes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Projeto node + express criado com o proposito de praticar a implementação de pipelines com o github actions",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "start": "node src/server.js",
     "build": "babel src -d dist"
   },
