--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,9 +7,12 @@ on:
     branches: [ "main" ]
   workflow_dispatch: 
 
+env:
+  IMAGE_NAME: app-triangulo
+
 jobs:
 
-  build-test:
+  run-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +30,7 @@ jobs:
       - name: Run tests
         run: npm test
 
-  build-node-app:
+  build-application:
     runs-on: ubuntu-latest
     needs: build-test
 
@@ -46,11 +49,22 @@ jobs:
       - name: Build project
         run: npm run build
       
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/app-triangulo:latest .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build and Push image to Docker Hub
+        user: docker/build-push-action@v4
+        with:
+          context:
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{env.IMAGE_NAME}}:latest
 
-      - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/app-triangulo:latest
+
+    
