--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -59,7 +59,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       
       - name: Build and Push image to Docker Hub
-        user: docker/build-push-action@v4
+        uses: docker/build-push-action@v4
         with:
           context:
           file: ./Dockerfile
