--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,6 +9,13 @@ on:
 
 env:
   IMAGE_NAME: app-triangulo
+  AWS_REGION: us-east-1
+  ECS_TASK_DEFINITION: aws/td.json
+  CONTAINER_IMAGE: luskinhagameplay/app-triangulo
+  CONTAINER_NAME: app-triangulo
+  ECS_SERVICE: triangulo-app-service             
+  ECS_CLUSTER: triangulo-app-rabbit
+
 
 jobs:
 
@@ -65,6 +72,35 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{env.IMAGE_NAME}}:latest
+  
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-application
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: ${{ env.ECS_TASK_DEFINITION }}
+          container-name: ${{ env.CONTAINER_NAME }}
+          image: ${{ env.CONTAINER_IMAGE }}
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
+
 
 
     
