--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,7 @@ on:
 env:
   IMAGE_NAME: app-triangulo
   AWS_REGION: us-east-1
-  ECS_TASK_DEFINITION: aws/td.json
+  ECS_TASK_DEFINITION: ./aws/td.json
   CONTAINER_IMAGE: luskinhagameplay/app-triangulo
   CONTAINER_NAME: app-triangulo
   ECS_SERVICE: triangulo-service-rabbit            
