ajuste no nome do service e cluster na aws

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,7 +14,7 @@ env:
   CONTAINER_IMAGE: luskinhagameplay/app-triangulo
   CONTAINER_NAME: app-triangulo
   ECS_SERVICE: triangulo-service-rabbit            
-  ECS_CLUSTER: triangulo-app-rabbit
+  ECS_CLUSTER: triangulo-app-cluster-rabbit
 
 
 jobs:
